--- a/front-end/to-do.html
+++ b/front-end/to-do.html
@@ -74,7 +74,7 @@
 
 
         <div class="container text-right mt-5 container-addbtn">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            <button type="button" class="btn btn-ntask py-2" data-toggle="modal" data-target="#exampleModal">
                 New Task
               </button>
         </div>
@@ -89,8 +89,8 @@
                 <div class="modal-body">
                   <form name="">
                     <div class="form-group row">
-                        <label for="taskName" class="col-sm-2 col-form-label label-special">Task Name:</label>
-                        <div class="col-sm-10">
+                        <label for="taskName" class="col-sm-3 col-form-label label-special">Task Name:</label>
+                        <div class="col-sm-9">
                             <input type="text" class="form-control" id="taskName" required>
                         </div>
                     </div>
@@ -99,14 +99,14 @@
                         <textarea class="form-control" rows="3" id="descr" name="text"></textarea>
                     </div>
                     <div class="form-group row mt-4">
-                        <label for="dueDate" class="col-sm-2 col-form-label label-special">Due Date:</label>
-                        <div class="col-sm-10">
+                        <label for="dueDate" class="col-sm-3 col-form-label label-special">Due Date:</label>
+                        <div class="col-sm-9">
                             <input type="date" class="form-control" id="dueDate" required>
                         </div>
                     </div>
                     <input type="hidden" id="status" value="Ongoing">
                     <div class="text-center"> 
-                        <button type="submit" class="btn" onclick="validateForm()">Add</button>
+                        <button type="submit" class="btn btn-add px-5 mt-5" onclick="validateForm()">Add</button>
                     </div>
                   </form>
                 </div>
